--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -1,3 +1,26 @@
+
+body{
+  height: 100vh;
+  width: 100vw;
+  background: url(../../123.jpg) no-repeat center center fixed ;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.container{
+  background-image: url("../../theatre.jpg");
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+  
+  border-radius: 10px;
+
+box-shadow:  5px 5px 10px #111111,
+             -5px -5px 10px #171717;
+}
+
 .ba {
   border-style: solid;
   border-width: 1px;
