--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -2,14 +2,15 @@
 body{
   height: 100vh;
   width: 100vw;
-  background: url(../../123.jpg) no-repeat center center fixed ;
+  background: url(../../assets/123.jpg) no-repeat center center fixed ;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  /* overflow: hidden; */
 }
 .container{
-  background-image: url("../../theatre.jpg");
+  background-image: url("../../assets/theatre.jpg");
 
   background-repeat: no-repeat;
   background-size: cover;
