--- a/client/src/components/IndiviualMovie/IndiviualMovie.css
+++ b/client/src/components/IndiviualMovie/IndiviualMovie.css
@@ -29,12 +29,30 @@
     position: absolute;
 }
 
+.movie-info-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .movie-info-wrapper {
+        flex-direction: row;
+    }
+}
+
 .movie-info {
     /* border: solid white 2px; */
     width: auto;
     flex-grow: 1;
     color: white;
     padding: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+    .movie-info {
+        width: 100%;
+    }
 }
 
 .movie-title {
@@ -52,14 +70,27 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin-top: 1rem;
+    gap: 2rem;
+    margin: 2rem 0;
 }
 
 .movie-details-wrapper p {
-    margin: 0 2rem 0 0;
+    margin: 0;
 }
 
-.movie-runtime span {
+.movie-runtime,
+.movie-releaseDate,
+.movie-vote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+}
+
+.movie-runtime span,
+.movie-releaseDate span,
+.movie-vote span {
     font-weight: bold;
 }
 
@@ -68,6 +99,7 @@
     border-radius: 1rem;
     padding: 0.25rem 1rem;
     cursor: pointer;
+    align-self: center;
 }
 
 .movie-genres a {
@@ -96,11 +128,32 @@
 
 .cast-name {
     margin: 1rem 0;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
 }
 
 .cast-character {
-    font-size: 1rem;
+    font-size: 0.8rem;
     color: #cccccc;
+}
+
+.movie-language-wrapper,
+.movie-production-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 1rem;
+    flex-wrap: wrap;
+    margin: 2rem 0;
+}
+
+.movie-language-wrapper span,
+.movie-production-wrapper span {
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+.movie-language-wrapper p,
+.movie-production-wrapper p {
+    margin: 0;
 }
