Made cast arrow button cursor pointer and fixed bug for right button

--- a/client/src/components/IndiviualMovie/IndiviualMovie.css
+++ b/client/src/components/IndiviualMovie/IndiviualMovie.css
@@ -157,3 +157,15 @@
 .movie-production-wrapper p {
     margin: 0;
 }
+
+.visibility-hidden {
+    visibility: hidden;
+}
+
+.visibility-visible {
+    visibility: visible;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
