--- a/client/src/components/IndiviualMovie/IndiviualMovie.css
+++ b/client/src/components/IndiviualMovie/IndiviualMovie.css
@@ -136,6 +136,19 @@
   font-weight: bold;
 }
 
+.cast-name a {
+  color: white;
+  text-decoration: none;
+}
+
+.cast-name a:visited {
+  color: white;
+}
+
+.cast-name a:hover {
+  color: blue;
+}
+
 .cast-character {
   font-size: 0.8rem;
   color: #cccccc;
